force-app/main/default/objects/Deal_Desk__c/Deal_Desk__c.object-meta.xml
<CustomObject>
    <label>Deal Desk</label>
    <nameField>
        <label>Deal Desk  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Desks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>