force-app/main/default/objects/Deal_Desk__c/fields/Accretive_Non_Recurring_ACV__c.field-meta.xml
<CustomField>
    <fullName>Accretive_Non_Recurring_ACV__c</fullName>
    <description>Accretive Non Recurring Revenue (Non-Recurring ACV)</description>
    <inlineHelpText>Hardwarec + Pro Serve Price *  Quantity</inlineHelpText>
    <label>Accretive Non Recurring ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>