force-app/main/default/objects/Deal_Desk__c/fields/Accretive_Recurring_ACV__c.field-meta.xml
<CustomField>
    <fullName>Accretive_Recurring_ACV__c</fullName>
    <label>Accretive Recurring ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>