force-app/main/default/objects/Deal_Desk__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <label>Approval Notes</label>
    <length>120</length>
    <type>Text</type>
</CustomField>