force-app/main/default/objects/Deal_Desk__c/fields/ARPU__c.field-meta.xml
<CustomField>
    <fullName>ARPU__c</fullName>
    <label>ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>