force-app/main/default/objects/Deal_Desk__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>What is the proposed ARR for this deal?</inlineHelpText>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>