force-app/main/default/objects/Deal_Desk__c/fields/CPQ_2nd_Level_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>CPQ_2nd_Level_Approver_Email__c</fullName>
    <description>CPQ 2nd level Approver</description>
    <label>CPQ 2nd Level Approver Email</label>
    <type>Email</type>
</CustomField>