force-app/main/default/objects/Deal_Desk__c/fields/CPQ_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Manager_Email__c</fullName>
    <description>Opportunity Owner&apos;s CPQ Manager</description>
    <label>CPQ Manager Email</label>
    <type>Email</type>
</CustomField>