force-app/main/default/objects/Deal_Desk__c/fields/Current_Price_Uplift_Language__c.field-meta.xml
<CustomField>
    <fullName>Current_Price_Uplift_Language__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>What is the language of the current price uplift, if any?</inlineHelpText>
    <label>Current Price Uplift Language</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>