force-app/main/default/objects/Deal_Desk__c/fields/Deal_Desk_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Date__c</fullName>
    <label>Deal Desk Date</label>
    <type>Date</type>
</CustomField>