force-app/main/default/objects/Deal_Desk__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>What type of opportunity is this deal?</inlineHelpText>
    <label>Deal Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>