force-app/main/default/objects/Deal_Desk__c/fields/Existing_New_Customer__c.field-meta.xml
<CustomField>
    <fullName>Existing_New_Customer__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>Select whether this deal is for an existing or new customer.</inlineHelpText>
    <label>Existing/New Customer?</label>
    <length>30</length>
    <type>Text</type>
</CustomField>