force-app/main/default/objects/Deal_Desk__c/fields/Fleet_Size__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Size__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>Enter the customer&apos;s current fleet size.</inlineHelpText>
    <label>Fleet Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>