force-app/main/default/objects/Deal_Desk__c/fields/Has_This_Been_on_Deal_Desk_Before__c.field-meta.xml
<CustomField>
    <fullName>Has_This_Been_on_Deal_Desk_Before__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>If so, please provide which Deal Desk, and the approval in the proposal details.</inlineHelpText>
    <label>Has This Been on Deal Desk Before?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>