force-app/main/default/objects/Deal_Desk__c/fields/NET_ARR__c.field-meta.xml
<CustomField>
    <fullName>NET_ARR__c</fullName>
    <label>NET ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>