force-app/main/default/objects/Deal_Desk__c/fields/NRF_Current__c.field-meta.xml
<CustomField>
    <fullName>NRF_Current__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>What is the language of the current NRF, if any?</inlineHelpText>
    <label>Current NRF Language</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>