force-app/main/default/objects/Deal_Desk__c/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <description>Pulls Information from Opportunity Name
Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>Link to opportunity record.</inlineHelpText>
    <label>Opportunity Link</label>
    <type>Url</type>
</CustomField>