force-app/main/default/objects/Deal_Desk__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>Name of opportunity to be considered by Deal Desk.</inlineHelpText>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Desks</relationshipLabel>
    <relationshipName>Deal_Desks</relationshipName>
    <type>Lookup</type>
</CustomField>