force-app/main/default/objects/Deal_Desk__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>It Should be Opportunity Owner in the Opportunity Page.</description>
    <label>Opportunity Owner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>