force-app/main/default/objects/Deal_Desk__c/fields/Opportunity_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Email__c</fullName>
    <description>Opportunity Owner Email</description>
    <label>Opportunity Owner Email</label>
    <type>Email</type>
</CustomField>