force-app/main/default/objects/Deal_Desk__c/fields/Opportunity_Size__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Size__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>What is the size of this opportunity?</inlineHelpText>
    <label>Opportunity Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>