force-app/main/default/objects/Deal_Desk__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>What product types are included in this deal?</inlineHelpText>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVG</fullName>
            </value>
            <value>
                <fullName>XRS</fullName>
            </value>
            <value>
                <fullName>MCP(All)</fullName>
            </value>
            <value>
                <fullName>TT(All)</fullName>
            </value>
            <value>
                <fullName>RNT</fullName>
            </value>
            <value>
                <fullName>RTS</fullName>
            </value>
            <value>
                <fullName>RNA</fullName>
            </value>
            <value>
                <fullName>RDC</fullName>
            </value>
            <value>
                <fullName>CEV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>