force-app/main/default/objects/Deal_Desk__c/fields/Proposal_Details__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Details__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>Please describe the details of the proposal for this customer, including details for each product, list price, % discount and sales price you’re offering.</inlineHelpText>
    <label>Proposal Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>