force-app/main/default/objects/Deal_Desk__c/fields/Proposed_NRF_Language__c.field-meta.xml
<CustomField>
    <fullName>Proposed_NRF_Language__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>What is the proposed NRF language?</inlineHelpText>
    <label>Proposed NRF Language</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>