force-app/main/default/objects/Deal_Desk__c/fields/Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>What is the subscription term, in months?</inlineHelpText>
    <label>Subscription Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>