force-app/main/default/objects/Deal_Desk__c/fields/Total_Accretive_ACV__c.field-meta.xml
<CustomField>
    <fullName>Total_Accretive_ACV__c</fullName>
    <label>Total Accretive ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>