force-app/main/default/objects/Deal_Desk__c/fields/What_are_they_offering__c.field-meta.xml
<CustomField>
    <fullName>What_are_they_offering__c</fullName>
    <label>What are they offering</label>
    <length>120</length>
    <type>Text</type>
</CustomField>