force-app/main/default/objects/Deal_Desk__c/fields/What_are_we_doing_for_the_customer_now__c.field-meta.xml
<CustomField>
    <fullName>What_are_we_doing_for_the_customer_now__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>What is being done for the customer at this point?</inlineHelpText>
    <label>What are we doing for the customer now?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>