force-app/main/default/objects/Deal_Desk__c/fields/What_is_the_expected_rollout_schedule__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_expected_rollout_schedule__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>Briefly describe the expected rollout schedule.</inlineHelpText>
    <label>What is the expected rollout schedule</label>
    <length>120</length>
    <type>Text</type>
</CustomField>