force-app/main/default/objects/Deal_Desk__c/fields/When_do_we_expect_a_decision__c.field-meta.xml
<CustomField>
    <fullName>When_do_we_expect_a_decision__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>Select the date when the customer will decide on this deal.</inlineHelpText>
    <label>When do we expect a decision?</label>
    <type>Date</type>
</CustomField>