force-app/main/default/objects/Deal_Desk__c/fields/Who_are_we_competing_against__c.field-meta.xml
<CustomField>
    <fullName>Who_are_we_competing_against__c</fullName>
    <label>Who are we competing against</label>
    <length>120</length>
    <type>Text</type>
</CustomField>