force-app/main/default/objects/Deal_Desk__c/fields/Why_are_you_bringing_this_to_Deal_Desk__c.field-meta.xml
<CustomField>
    <fullName>Why_are_you_bringing_this_to_Deal_Desk__c</fullName>
    <description>Owned by Sales Ops to support Deal Desk functionality. 09/2018</description>
    <inlineHelpText>Please explain why you are bringing this deal to Deal Desk for consideration.</inlineHelpText>
    <label>Why are you bringing this to Deal Desk?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>