force-app/main/default/objects/Deal_Desk__c/validationRules/Create_Deal_Desk.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Deal_Desk</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Opportunity_Name__r.SBQQ__PrimaryQuote__c)</errorConditionFormula>
    <errorMessage>Deal Desk cannot be created as there is no primary quote for related opportunity</errorMessage>
</ValidationRule>